--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -14,4 +14,12 @@ body {
         align-items: center;
         padding: 16px 22px;
     }
+
+    &__main{
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+        margin: 0 auto;
+        padding: 26px 0;
+    }
 }
