--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,25 +1,24 @@
 @import '~antd/dist/antd.css';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Open+Sans:wght@300;400;500;600&display=swap');
 
-
 body {
-    background: #EBEEF3;
+  background: #ebeef3;
 }
 
-.app{
-    &__nav{
-        background-color: #fff;
-        height: 80px;
-        display: flex;
-        align-items: center;
-        padding: 16px 22px;
-    }
+.app {
+  &__nav {
+    background-color: #fff;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    padding: 16px 22px;
+  }
 
-    &__main{
-        display: flex;
-        flex-direction: column;
-        width: 80vw;
-        margin: 0 auto;
-        padding: 26px 0;
-    }
+  &__main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 26px 26px;
+  }
 }
