--- a/src/components/ArticleListItem/ArticleListItem.scss
+++ b/src/components/ArticleListItem/ArticleListItem.scss
@@ -16,6 +16,22 @@
       width: 680px;
 
       .title {
+        &__header {
+          display: flex;
+          align-items: baseline;
+        }
+        &__follow {
+          padding-left: 10px;
+        }
+        &__count {
+          padding-left: 5px;
+          font-family: 'Inter';
+          font-style: normal;
+          font-weight: normal;
+          font-size: 12px;
+          line-height: 22px;
+          color: rgba(0, 0, 0, 0.75);
+        }
         &__info {
           padding-bottom: 6px;
           font-family: 'Inter';
