--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -45,6 +45,9 @@
       }
     }
   }
+  &__user {
+    margin-left: 10px;
+  }
   &__descr {
     font-family: 'Inter';
     font-style: normal;
@@ -56,6 +59,7 @@
   }
   &__btns {
     padding-top: 30px;
+    display: flex;
   }
   header {
     display: flex;
