united EditArticle and CreateArticle in to ArticleForm. Work with pagination and Follow case

--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -67,6 +67,8 @@
   }
 
   main {
+    display: flex;
+    flex-direction: column;
     font-family: 'Inter';
     font-style: normal;
     font-weight: normal;
