--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -11,6 +11,11 @@ body {
     display: flex;
     align-items: center;
     padding: 16px 22px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
   }
 
   &__main {
@@ -18,6 +23,6 @@ body {
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    padding: 26px 26px;
+    padding: 120px 26px 26px 26px;
   }
 }
