--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Open+Sans:wght@300;400;500;600&display=swap');
-
 body {
   background: #ebeef3;
 }
 
 .app {
+  .ant-input-prefix {
+    margin-right: 10px;
+  }
   &__nav {
     background-color: #fff;
     height: 80px;
@@ -24,5 +25,16 @@ body {
     justify-content: center;
     margin: 0 auto;
     padding: 120px 26px 26px 26px;
+  }
+
+  &__back-top {
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    border-radius: 4px;
+    background-color: #1088e9;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
   }
 }
